--- a/TARge21House/TARge21House.Data/TARge21House.Data.csproj
+++ b/TARge21House/TARge21House.Data/TARge21House.Data.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TARge21House.Core\TARge21House.Core.csproj" />
+  </ItemGroup>
+
 </Project>
