--- a/TARge21House/TARge21House/TARge21House.csproj
+++ b/TARge21House/TARge21House/TARge21House.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TARge21House.Data\TARge21House.Data.csproj" />
+  </ItemGroup>
+
 </Project>
