--- a/TARge21House/TARge21House/appsettings.json
+++ b/TARge21House/TARge21House/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=TARge21House;Trusted_Connection=true;MultipleActiveResultSets=true"
+  }
 }
