Create page to project

--- a/TARge21House/TARge21House.ApplicationServices/TARge21House.ApplicationServices.csproj
+++ b/TARge21House/TARge21House.ApplicationServices/TARge21House.ApplicationServices.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TARge21House.Data\TARge21House.Data.csproj" />
+  </ItemGroup>
+
 </Project>
