--- a/TARge21House/TARge21House.ApplicationServices/TARge21House.ApplicationServices.csproj
+++ b/TARge21House/TARge21House.ApplicationServices/TARge21House.ApplicationServices.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TARge21House.Data\TARge21House.Data.csproj" />
   </ItemGroup>
 
